<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetpasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayoutBanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/banner_background_gradient"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            app:cardBackgroundColor="#F7F8F5F6"
            card_view:cardCornerRadius="75dp"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_lock_foreground" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="312dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewForget1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yo_forget_your_password"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewForget2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/no_worries_enter_your_email_and_we_will_send_you_a_reset_link" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail_forgetPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawableTint="@color/white"
                android:drawablePadding="15dip"
                android:hint="Email"
                android:textColorHint="#F1D6D6"
                android:textColor="#F1D6D6"
                android:inputType="textEmailAddress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendLink"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/send_email_link"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/A400"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/textViewRememberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="right"
                android:text="@string/remember_password_login"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>