<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/linearLayoutBanner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewLogin"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="#E91E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:scaleType="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/ic_wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLogin"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="150dp"
                card_view:cardCornerRadius="75dp"
                card_view:cardPreventCornerOverlap="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/logo"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <TextView-->
<!--            android:id="@+id/textViewTitle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingTop="10dp"-->
<!--            android:fontFamily="@font/aref_ruqaa"-->
<!--            android:text="@string/title"-->
<!--            androi:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="20sp" />-->

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingTop="75dp">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/A400"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawableTint="@color/A400"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableTint="@color/A400"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:textColor="@color/A400"
                android:textAlignment="textEnd"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/textViewErrorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/A700" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="15sp"
                android:textColor="@color/A400"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/A400"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/textViewPromptQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promptQuestion"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/textViewRegisterHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerHere"
                    android:textColor="@color/A400"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>