<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">

    <FrameLayout
        android:id="@+id/linearLayoutBanner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewChangepw"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/ic_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewChangepw"/>

        <TextView
            android:id="@+id/textViewChangePassword"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/changePasswordPage"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#F4F4F4"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/viewChangepw"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/viewChangepw"
            app:layout_constraintTop_toTopOf="@+id/viewChangepw"
            app:layout_constraintVertical_bias="0.333" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="50dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_currentpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextProfileCurrentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/currentPassword"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextProfileNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/newPassword"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextProfileNewConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/confirmNewPassword"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangePassword"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/changePassword"
                    android:textColor="@color/A400"
                    android:textSize="15sp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/A400"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout >