<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/linearLayoutBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/viewChangepw"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="#E91E63"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:scaleType="center"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/ic_wave"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewChangepw"/>

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_margin="50dp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textViewPromptQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountExistQuestion"
                    app:layout_constraintTop_toBottomOf="@id/textViewRegister"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/textViewRegister"/>

                <TextView
                    android:id="@+id/textViewLoginBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/textViewRegister"
                    app:layout_constraintLeft_toRightOf="@id/textViewPromptQuestion" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawableTint="@color/A400"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/firstName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawableTint="@color/A400"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/lastName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDOB"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                        android:drawableTint="@color/A400"
                        android:hint="Date of Birth"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="Female" />
                    </RadioGroup>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableTint="@color/A400"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox"
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Travel Planner?"
                                android:onClick="onCheckboxClicked" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPlannerCode"
                                android:layout_width="match_parent"
                                android:layout_height="42dp"
                                android:drawableStart="@drawable/ic_baseline_security_24"
                                android:drawableTint="@color/A400"
                                android:hint="Code"
                                android:inputType="number"
                                android:maxLines="1"
                                android:visibility="gone" />
                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/register"
                    android:textColor="@color/A400"
                    android:textSize="15sp"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/A400"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>